--- a/index.html
+++ b/index.html
@@ -171,5 +171,66 @@
         </div>
       </div>
     </section>
+    <!--Testimonials-->
+    <section id="testimonials">
+      <!--Testimonials and container blocks-->
+
+      <div class="max-w-6xl px-5 mx-auto mt-32 text-center">
+        <!--Heading-->
+        <h2 class="text-4xl text-center font-bold">
+          Whats Different About Manage?
+        </h2>
+        <!--testimonaila Container-->
+        <!--Test 1-->
+        <div class="flex flex-col mt-24 md:flex-row md:space-x-6">
+          <div
+            class="flex flex-col p-6 items-center space-y-6 rounded-lg bg-veryLightGray ease-in-out hover:bg-gray-300 md:w-1/3"
+          >
+            <img src="img/avatar-anisha.png" class="w-16 -mt-14" />
+            <h5 class="text-lg font-bold">Ameesha</h5>
+            <p class="text-sm text-darkGrayishBlue">
+              is simply dummy text of the printing and typesetting industry.
+              when an unknown printer took a galley of type and scrambled it to
+              make a type specimen book.
+            </p>
+          </div>
+          <!--Test 2-->
+
+          <div
+            class="hidden flex-col p-6 items-center space-y-6 rounded-lg bg-veryLightGray md:w-1/3 md:flex"
+          >
+            <img src="img/avatar-shanai.png" class="w-16 -mt-14" />
+            <h5 class="text-lg font-bold">Ameesha</h5>
+            <p class="text-sm text-darkGrayishBlue">
+              is simply dummy text of the printing and typesetting industry.
+              when an unknown printer took a galley of type and scrambled it to
+              make a type specimen book.
+            </p>
+          </div>
+
+          <!--Test 3-->
+
+          <div
+            class="hidden flex-col p-6 items-center space-y-6 rounded-lg bg-veryLightGray md:w-1/3 md:flex"
+          >
+            <img src="img/avatar-richard.png" class="w-16 -mt-14" />
+            <h5 class="text-lg font-bold">Ameesha</h5>
+            <p class="text-sm text-darkGrayishBlue">
+              is simply dummy text of the printing and typesetting industry.
+              when an unknown printer took a galley of type and scrambled it to
+              make a type specimen book.
+            </p>
+          </div>
+        </div>
+        <!--Button-->
+        <div class="my-16">
+          <a
+            href=""
+            class="p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brightRedLight"
+            >Get Started</a
+          >
+        </div>
+      </div>
+    </section>
   </body>
 </html>
