--- a/index.html
+++ b/index.html
@@ -30,6 +30,28 @@
           class="hidden md:block p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brightRedLight"
           >Get Started</a
         >
+
+        <!--Hamburger Icon-->
+        <button
+          id="menu-btn"
+          class="block hamburger md:hidden focus:outline-none"
+        >
+          <span class="hamburger-top"></span>
+          <span class="hamburger-middle"></span>
+          <span class="hamburger-bottom"></span>
+        </button>
+      </div>
+
+      <!--Mobile Menu-->
+      <div class="md:hidden">
+        <div
+          id="menu"
+          class="absolute flex flex-col items-center self-end py-8 mt-10 space-y-6 font-bold bg-white sm-w-auto sm:self-center left-6 right-6 drop-shadow-md"
+        >
+          <a href="#">Pricing</a>
+          <a href="#">Products</a>
+          <a href="#">About Us</a>
+        </div>
       </div>
     </nav>
     <!--HERO-->
@@ -232,5 +254,101 @@
         </div>
       </div>
     </section>
+    <section id="cta" class="bg-brightRed">
+      <div
+        class="container flex flex-col items-center justify-between px-6 py-24 mx-auto space-y-12 md:py-12 md:space-y-o md:flex-row"
+      >
+        <h2
+          class="text-5xl font-bold leading-tight text-center text-white md:text-4xl md:max-w-xl md:text-left"
+        >
+          Simplify How Your Team Works Today
+        </h2>
+        <div>
+          <a
+            href=""
+            class="p-3 px-6 pt-2 text-brightRed bg-white rounded-full baseline shadow-2xl hover:bg-gray-900"
+            >Get Started</a
+          >
+        </div>
+      </div>
+    </section>
+    <footer class="bg-veryDarkBlue">
+      <!--Flex Caontainer-->
+      <div
+        class="container flex flex-col-reverse justify-between px-6 py-10 mx-auto space-y-8 md:flex-row md:space-y-0"
+      >
+        <!--LOgo and socail links-->
+        <div
+          class="flex flex-col-reverse justify-between space-y-12 items-center md:flex-col md:space-y-0 md:items-start"
+        >
+          <div>
+            <img src="./img/logo-white.svg" class="h-8" alt="" />
+          </div>
+          <!--Social Links-->
+          <div class="flex justify-center space-x-4">
+            <!--Link1-->
+            <a href="#">
+              <img src="./img/icon-facebook.svg" class="h-8" alt="" />
+            </a>
+
+            <!--Link1-->
+            <a href="#">
+              <img src="./img/icon-youtube.svg" class="h-8" alt="" />
+            </a>
+
+            <!--Link1-->
+            <a href="#">
+              <img src="./img/icon-twitter.svg" class="h-8" alt="" />
+            </a>
+
+            <!--Link1-->
+            <a href="#">
+              <img src="./img/icon-pinterest.svg" class="h-8" alt="" />
+            </a>
+
+            <!--Link1-->
+            <a href="#">
+              <img src="./img/icon-instagram.svg" class="h-8" alt="" />
+            </a>
+          </div>
+        </div>
+        <!--lIST container-->
+        <div class="flex justify-around space-x-32">
+          <div class="flex flex-col space-y-3 text-white">
+            <a href="#" class="hover:text-brightRed">Home</a>
+            <a href="#" class="hover:text-brightRed">Pricing</a>
+            <a href="#" class="hover:text-brightRed">Products</a>
+            <a href="#" class="hover:text-brightRed">About</a>
+          </div>
+
+          <div class="flex flex-col space-y-3 text-white">
+            <a href="#" class="hover:text-brightRed">Carriers</a>
+            <a href="#" class="hover:text-brightRed">Community</a>
+            <a href="#" class="hover:text-brightRed">Privacy Policy</a>
+            <!-- <a href="#" class="hover:text-brightRed">About</a> -->
+          </div>
+        </div>
+        <!--Input Section-->
+        <div class="flex flex-col justify-between">
+          <form>
+            <div class="flex space-x-3">
+              <input
+                type="text"
+                class="flex-1 px-4 rounded-full focus:outline-none"
+                placeholder="Update In Your Inbox"
+              />
+              <button
+                class="px-6 py-2 text-white rounded bg-brightRed hover:bg-brightRedLight focus:outline-none"
+              >
+                Go
+              </button>
+            </div>
+          </form>
+          <div class="hidden text-white md:block">
+            Copyrights &copy; 2022, All Rights Reserved
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
