--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div class="md:hidden">
         <div
           id="menu"
-          class="absolute flex flex-col items-center self-end py-8 mt-10 space-y-6 font-bold bg-white sm-w-auto sm:self-center left-6 right-6 drop-shadow-md"
+          class="absolute flex-col items-center hidden self-end py-8 mt-10 space-y-6 font-bold bg-white sm-w-auto sm:self-center left-6 right-6 drop-shadow-md"
         >
           <a href="#">Pricing</a>
           <a href="#">Products</a>
@@ -67,7 +67,7 @@
           >
             Bring Everyone Together To Build Better Products
           </h1>
-          <p class="max-w-sm text-center text-darkGrayishBlue md:text-left">
+          <p class="max-w-md text-center text-darkGrayishBlue md:text-left">
             Manage makes it simple for software teams to plan day-to-day tasks
             while keeping the larger team goals in view.
           </p>
@@ -89,14 +89,16 @@
     <!--Featues-->
     <section id="features">
       <div
-        class="container flex flex-col px-4 mx-auto mt-12-space-y-12 md:space-y-0 md:flex-row"
+        class="container mt-20 flex flex-col px-4 mx-auto mt-12-space-y-12 md:space-y-0 md:flex-row"
       >
         <!--Whats Different-->
         <div class="flex flex-col space-y-12 md:w-1/2">
           <h2 class="max-w-md text-4xl font-bold text-center md:text-left">
             What's Different About Manage?
           </h2>
-          <p class="max-w-sm text-center text-darkGrayishBlue md:text-left">
+          <p
+            class="max-w-md text-center justify-center text-darkGrayishBlue md:text-left"
+          >
             Manage provides all the functionality your team needs, without the
             complexity. Our software is tailor-made for modern digital product
             teams.
@@ -105,7 +107,7 @@
         <div class="flex flex-col space-y-8 md:w-1/2">
           <!--1st item-->
           <div
-            class="flex flex-col space-y-6 md:space-y-0 md:space-x-6 md:flex-row"
+            class="flex mt-5 flex-col space-y-6 md:space-y-0 md:space-x-6 md:flex-row"
           >
             <div class="rounded-l-full bg-brightRedSupLight md:bg-transparent">
               <div class="flex items-center space-x-2">
@@ -350,5 +352,6 @@
         </div>
       </div>
     </footer>
+    <script src="js/script.js"></script>
   </body>
 </html>
